# pypkg_diff

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pypkg_diff/: pname_parser.py
tests/: test_pname_parser.py
